# padenti

./: CMakeLists.txt  README.md
cmake/: FindOpenCL.cmake
test/: CMakeLists.txt  test_classifier.cpp
